# langchain-RAG

./: .gitignore  app.py  client.py  home.py  notebook.ipynb  pyproject.toml  vllm_test.py  경계선 지능인 행동_GPT 증강 사례 (공유용).xlsx
api-chain/: README.md
api-chain/app/: server.py
api-server/: pyproject.toml
api-server/app/: db.py  llm_setup.py  models.py  server.py
env/: pyvenv.cfg
modules/: llm.py  parser.py  retriever.py
